@@ -9,8 +9,8 @@
     <version>0.9</version>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
     </properties>
 
     <build>
@@ -39,9 +39,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -50,8 +49,10 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>me.joba.factorio.Main</mainClass>
-                            <packageName>me.joba.factorio</packageName>
+                            <mainClass>me.joba.factorio.lang.Generator</mainClass>
+                            <packageName>me.joba.factorio.lang</packageName>
+<!--                            <mainClass>me.joba.factorio.Main</mainClass>-->
+<!--                            <packageName>me.joba.factorio</packageName>-->
                         </manifest>
                         <manifestEntries>
                             <mode>development</mode>
